--- a/index.html
+++ b/index.html
@@ -1,69 +1,179 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
+
 <body>
-  <div class="container">
-    <h1>Playlist</h1>
+  <div class="flex">
+    <nav class="side__nav">
+      <div class="nav">
+        <ul>
+          <li>
+            <a href="#">
+              <i class="fa-solid fa-house"></i>
+              <span class="font__montserrat">Home</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fa-solid fa-magnifying-glass"></i>
+              <span class="font__montserrat">Search</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fa-solid fa-music"></i>
+              <span class="font__montserrat">Your Library</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div>
+        <p class="mb__16 font__roboto">Playlist</p>
+        <div class="flex mb__16">
+          <div class="box__white">
+            <i class="fa-solid fa-plus" style="color: black"></i>
+          </div>
+          <p class="align-center font__montserrat">Create Playlist</p>
+        </div>
+        <div class="flex mb__16">
+          <div class="box__white">
+            <i class="fa-solid fa-heart" style="color: #e56262"></i>
+          </div>
+          <p class="align-center font__montserrat">Create Playlist</p>
+        </div>
+        <hr>
+      </div>
+    </nav>
+    <main class="main">
+      <div class="inside__main">
+        <h1 class="h1">Playlist</h1>
+        <div class="playlist flex">
+          <div class="list__playlist">
+            <img class="fit__image" src="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/spotify-minimal-playlist-album-cover-cyan-design-template-fff58702d4947264deeb11e1e1737bd9_screen.jpg?ts=1651478054" alt="Spotify Minimal Playlist Album Cover Cyan Template | PosterMyWall">
+            <p class="title__song">Daily Mix 1</p>
+            <p class="author__song">
+              Author
+            </p>
+          </div>
+          <div class="list__playlist">
+            <img class="fit__image" src="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/spotify-minimal-playlist-album-cover-cyan-design-template-fff58702d4947264deeb11e1e1737bd9_screen.jpg?ts=1651478054" alt="Spotify Minimal Playlist Album Cover Cyan Template | PosterMyWall">
+            <p class="title__song">Daily Mix 1</p>
+            <p class="author__song">
+              Author
+            </p>
+          </div>
+          <div class="list__playlist">
+            <img class="fit__image" src="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/spotify-minimal-playlist-album-cover-cyan-design-template-fff58702d4947264deeb11e1e1737bd9_screen.jpg?ts=1651478054" alt="Spotify Minimal Playlist Album Cover Cyan Template | PosterMyWall">
+            <p class="title__song">Daily Mix 1</p>
+            <p class="author__song">
+              Author
+            </p>
+          </div>
+          <div class="list__playlist">
+            <img class="fit__image" src="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/spotify-minimal-playlist-album-cover-cyan-design-template-fff58702d4947264deeb11e1e1737bd9_screen.jpg?ts=1651478054" alt="Spotify Minimal Playlist Album Cover Cyan Template | PosterMyWall">
+            <p class="title__song">Daily Mix 1</p>
+            <p class="author__song">
+              Author
+            </p>
+          </div>
+        </div>
+        <div class="playlist flex">
+          <div class="list__playlist">
+            <img class="fit__image" src="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/spotify-minimal-playlist-album-cover-cyan-design-template-fff58702d4947264deeb11e1e1737bd9_screen.jpg?ts=1651478054" alt="Spotify Minimal Playlist Album Cover Cyan Template | PosterMyWall">
+            <p class="title__song">Daily Mix 1</p>
+            <p class="author__song">
+              Author
+            </p>
+          </div>
+          <div class="list__playlist">
+            <img class="fit__image" src="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/spotify-minimal-playlist-album-cover-cyan-design-template-fff58702d4947264deeb11e1e1737bd9_screen.jpg?ts=1651478054" alt="Spotify Minimal Playlist Album Cover Cyan Template | PosterMyWall">
+            <p class="title__song">Daily Mix 1</p>
+            <p class="author__song">
+              Author
+            </p>
+          </div>
+          <div class="list__playlist">
+            <img class="fit__image" src="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/spotify-minimal-playlist-album-cover-cyan-design-template-fff58702d4947264deeb11e1e1737bd9_screen.jpg?ts=1651478054" alt="Spotify Minimal Playlist Album Cover Cyan Template | PosterMyWall">
+            <p class="title__song">Daily Mix 1</p>
+            <p class="author__song">
+              Author
+            </p>
+          </div>
+          <div class="list__playlist">
+            <img class="fit__image" src="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/spotify-minimal-playlist-album-cover-cyan-design-template-fff58702d4947264deeb11e1e1737bd9_screen.jpg?ts=1651478054" alt="Spotify Minimal Playlist Album Cover Cyan Template | PosterMyWall">
+            <p class="title__song">Daily Mix 1</p>
+            <p class="author__song">
+              Author
+            </p>
+          </div>
+        </div>
+        <div class="playlist flex">
+          <div class="list__playlist">
+            <img class="fit__image" src="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/spotify-minimal-playlist-album-cover-cyan-design-template-fff58702d4947264deeb11e1e1737bd9_screen.jpg?ts=1651478054" alt="Spotify Minimal Playlist Album Cover Cyan Template | PosterMyWall">
+            <p class="title__song">Daily Mix 1</p>
+            <p class="author__song">
+              Author
+            </p>
+          </div>
+          <div class="list__playlist">
+            <img class="fit__image" src="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/spotify-minimal-playlist-album-cover-cyan-design-template-fff58702d4947264deeb11e1e1737bd9_screen.jpg?ts=1651478054" alt="Spotify Minimal Playlist Album Cover Cyan Template | PosterMyWall">
+            <p class="title__song">Daily Mix 1</p>
+            <p class="author__song">
+              Author
+            </p>
+          </div>
+          <div class="list__playlist">
+            <img class="fit__image" src="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/spotify-minimal-playlist-album-cover-cyan-design-template-fff58702d4947264deeb11e1e1737bd9_screen.jpg?ts=1651478054" alt="Spotify Minimal Playlist Album Cover Cyan Template | PosterMyWall">
+            <p class="title__song">Daily Mix 1</p>
+            <p class="author__song">
+              Author
+            </p>
+          </div>
+          <div class="list__playlist">
+            <img class="fit__image" src="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/spotify-minimal-playlist-album-cover-cyan-design-template-fff58702d4947264deeb11e1e1737bd9_screen.jpg?ts=1651478054" alt="Spotify Minimal Playlist Album Cover Cyan Template | PosterMyWall">
+            <p class="title__song">Daily Mix 1</p>
+            <p class="author__song">
+              Author
+            </p>
+          </div>
+        </div>
+      </div>
+    </main>
+  </div>
+  <footer class="footer">
     <div class="flex">
-      <div class="music-item">
-        <div class="music-item__img">
-          <img src="https://i.ytimg.com/vi/9jK-NcRmVcw/maxresdefault.jpg" width="100%" alt="">
-        </div>
-        <div class="music-item__info">
-          <h3 class="music-item__title">Lorem 123</h3>
-          <p class="music-item__author">Author 123</p>
-        </div>
-      </div>
-      <div class="music-item">
-        <div class="music-item__img">
-          <img src="https://i.ytimg.com/vi/9jK-NcRmVcw/maxresdefault.jpg" width="100%" alt="">
-        </div>
-        <div class="music-item__info">
-          <h3 class="music-item__title">Lorem 123</h3>
-          <p class="music-item__author">Author 123</p>
+      <div class="albums">
+        <img class="fit__image" src="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/spotify-minimal-playlist-album-cover-cyan-design-template-fff58702d4947264deeb11e1e1737bd9_screen.jpg?ts=1651478054" height="60px" width="60px" alt="Spotify Minimal Playlist Album Cover Cyan Template | PosterMyWall">
+        <div class="align-center">
+          <p class="title__song">Daily Mix 1</p>
+          <p class="author__song">
+            Author
+          </p>
         </div>
       </div>
-      <div class="music-item">
-        <div class="music-item__img">
-          <img src="https://i.ytimg.com/vi/9jK-NcRmVcw/maxresdefault.jpg" width="100%" alt="">
+      <div class="track">
+        <div class="flex">
+          <i class="fa-solid fa-shuffle"></i>
+          <i class="fa-solid fa-backward"></i>
+          <i class="fa-solid fa-play"></i>
+          <i class="fa-solid fa-forward"></i>
+          <i class="fa-solid fa-repeat"></i>
         </div>
-        <div class="music-item__info">
-          <h3 class="music-item__title">Lorem 123</h3>
-          <p class="music-item__author">Author 123</p>
-        </div>
-      </div>
-      <div class="music-item">
-        <div class="music-item__img">
-          <img src="https://i.ytimg.com/vi/9jK-NcRmVcw/maxresdefault.jpg" width="100%" alt="">
-        </div>
-        <div class="music-item__info">
-          <h3 class="music-item__title">Lorem 123</h3>
-          <p class="music-item__author">Author 123</p>
-        </div>
-      </div>
-      <div class="music-item">
-        <div class="music-item__img">
-          <img src="https://i.ytimg.com/vi/9jK-NcRmVcw/maxresdefault.jpg" width="100%" alt="">
-        </div>
-        <div class="music-item__info">
-          <h3 class="music-item__title">Lorem 123</h3>
-          <p class="music-item__author">Author 123</p>
-        </div>
-      </div>
-      <div class="music-item">
-        <div class="music-item__img">
-          <img src="https://i.ytimg.com/vi/9jK-NcRmVcw/maxresdefault.jpg" width="100%" alt="">
-        </div>
-        <div class="music-item__info">
-          <h3 class="music-item__title">Lorem 123</h3>
-          <p class="music-item__author">Author 123</p>
+        <div class="flex line">
+          <span class="counter font__roboto">00:00</span>
+          <div class="track__line"></div>
+          <span class="counter font__roboto">03:12</span>
         </div>
       </div>
     </div>
-  </div>
+  </footer>
 </body>
+
 </html>
